add test and image

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>My favorite musician</h1>
     <P>Queen has to be my favorite as they are the group that originally got me into music.</P>
+    <img src="./Queen.jpg" alt="Queen">
+    <p>Test 1</p>
 </body>
 </html>
